--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <svg
               focusable="false"
               xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
+              viewbox="0 0 24 24"
               class="logo-svg"
             >
               <path
@@ -35,7 +35,7 @@
             <svg
               class="HPVvwb"
               focusable="false"
-              viewBox="0 0 24 24"
+              viewbox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg"
             >
               <path
